Fix spacing for partner logos

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -552,8 +552,8 @@ section {
 
 #those-who-support-us-financially img {
   width: 30%;
-  padding-left: 1.5%;
-  padding-right: 1.5%;
+  padding-left: 1%;
+  padding-right: 1%;
   margin-bottom: 2.5em;
   vertical-align: middle;
 }
